--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -4719,13 +4719,48 @@ i.icon-plone-contentmenu-display-filtered_contents_search_view, i.icon-folder-fi
 
 /* =========== FIN Vista summary_view_news =========== */
 
+/* =========== Viewlet follow tags =========== */
+
+
 #viewlet-above-content-title{
   display:flex;
   justify-content: center;
   margin-bottom: 15px;
+  flex-wrap: wrap;
 }
 
 #viewlet-above-content-title a{
   box-sizing:1;
   margin-right: 10px;
 }
+
+.listtags{
+  width:100%;
+}
+
+.tagfollowed{
+background-color: #67931a;
+}
+
+.tagnotfollowed{
+background-color: #deded6;
+}
+
+/* =========== FIN Viewlet follow tags =========== */
+
+
+/* =========== portlet My Tags =========== */
+
+.tags_cloud {
+  margin: 5px 0;
+}
+
+.see_all_tags {
+  margin-top: 10px;
+}
+
+.tag_pill{
+    margin: 0 5px;
+}
+
+/* =========== FIN portlet My Tags =========== */
