mytags portlets changes

--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -4733,3 +4733,21 @@ input#form-widgets-domain {
 .portaltype-valoracioperiode li > a#plone-contentmenu-workflow {
     display: block;
 }
+
+.tagfollowed{
+background-color: #d2edf4;
+}
+
+.tags_cloud {
+    margin: 10px 0;
+}
+
+.tag_pill {
+    background-color: #16638d;
+    border-radius: 15px;
+    color: white;
+    font-size: 10px;
+    font-weight: 600;
+    margin: 3px;
+    padding: 2px 7px;
+}
