--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -2257,20 +2257,21 @@ background-color: #deded6;
     display: block;
 }
 
-.tagfollowed{
-background-color: #d2edf4;
-}
-
 .tags_cloud {
     margin: 10px 0;
 }
 
-.tag_pill {
-    background-color: #16638d;
+
+.tagnotfollowed {
+    background-color: #deded6;
     border-radius: 15px;
+    color: white;
+    margin: 3px;
+    padding: 2px 7px;
+}
+
+.tagfollowed > a {
     color: white;
     font-size: 10px;
     font-weight: 600;
-    margin: 3px;
-    padding: 2px 7px;
 }
