Dynamic color favorite star

--- a/ulearn/theme/scss/dynamic.scss
+++ b/ulearn/theme/scss/dynamic.scss
@@ -242,7 +242,7 @@ h1, h2, h3, label, span.label, fieldset legend {
     color: $secondary-color;
 }
 .favorite .fa-star {
-    color: orange;
+    color: $main-color;
 }
 #box_community .btn-large.dropdown-toggle {
 background: $main-color;
