--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -4823,7 +4823,8 @@ input:checked + .sliderbutton:before {
 .toogle-group {
   border-bottom: 1px solid #dddddd;
   display: flex;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  width: 1000px; }
 
 #newtoolbar-title {
   margin-top: -3px; }
