fix bug css hide link_blank icon

--- a/ulearn/theme/portlets/mysubjects/mysubjects.css
+++ b/ulearn/theme/portlets/mysubjects/mysubjects.css
@@ -157,7 +157,7 @@ ul#accordion li.panel.subject a  span {
     text-decoration: none;
 }
 
-.link_blank {
+#box_mysubjects .link_blank {
     display: none;
 }
 
