modificar noticies per a que ordene per data efectiva en els portlets

--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -2244,6 +2244,10 @@ background-color: #deded6;
     display: block;
 }
 
+.portaltype-news-item li > a#plone-contentmenu-workflow {
+    display: block;
+}
+
 .tags_cloud {
     margin: 10px 0;
 }
