--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -1758,7 +1758,6 @@ border-radius: 0;
 }
 #sharedwithme-container {
     background: white none repeat scroll 0 0;
-    min-height: 300px;
     padding: 10px;
     box-shadow: -1px 1px 2px #ddd;
 }
@@ -2457,4 +2456,16 @@ i.icon-plone-contentmenu-display-contents_pretty_view, i.icon-folder-contents_pr
 
 .portaltype-news-item li > a#plone-contentmenu-workflow {
     display: block;
+}
+
+.caixessearch_shared {
+    background: #f5f5f5 none repeat scroll 0 0;
+    margin-bottom: 10px;
+    min-height: 60px;
+    padding: 10px;
+}
+
+.shared_from_community {
+    color: #444;
+    font-weight: 600;
 }
