show canvi estat per ulearn.intranet

--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -2247,6 +2247,10 @@ background-color: #deded6;
     display: block;
 }
 
+.portaltype-vencimentcontracte li > a#plone-contentmenu-workflow {
+  display: block;
+}
+
 .tags_cloud {
     margin: 10px 0;
 }
