Css required terms

--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -2485,3 +2485,13 @@ i.icon-plone-contentmenu-display-contents_pretty_view, i.icon-folder-contents_pr
 .header-info a img.link_blank {
     display: none;
 }
+
+#formfield-form-widgets-terms span.label:after {
+    color: #a62e1f;
+    content: "*";
+    top: .35em;
+    position: relative;
+    font-size: 150%;
+    line-height: 0;
+    margin-left: 5px;
+}
