changed with to 90% only in profile view

--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -2205,7 +2205,7 @@ input#form-widgets-ILeadImage-image_caption,
 input#form-widgets-twitter_hashtag,
 input#form-widgets-IVersionable-changeNote {width :98%;}
 
-input[type="text"] {width: 98%;} 
+.template-personal-information input[type="text"] {width: 90%;} 
 
 /* =========== FIN Vista summary_view_news =========== */
 
