--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -4726,8 +4726,8 @@ input#form-widgets-twitter_hashtag,
 input#form-widgets-IVersionable-changeNote {
   width: 98%; }
 
-input[type="text"] {
-  width: 98%; }
+.template-personal-information input[type="text"] {
+  width: 90%; }
 
 /* =========== FIN Vista summary_view_news =========== */
 /* =========== Viewlet follow tags =========== */
