added css class for button news in app

--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -2340,7 +2340,7 @@ input:checked + .sliderbutton:before {
   margin-top: -3px;
 }
 
-#toggle-outoflist, #toggle-important, #toggle-flash, #newtoolbar-title {
+#toggle-outoflist, #toggle-important, #toggle-flash, #toggle-newsinapp, #newtoolbar-title {
     display: flex; margin-right: 15px;
 }
 
