--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -4836,7 +4836,7 @@ input:checked + .sliderbutton:before {
 #newtoolbar-title {
   margin-top: -3px; }
 
-#toggle-outoflist, #toggle-important, #toggle-flash, #newtoolbar-title {
+#toggle-outoflist, #toggle-important, #toggle-flash, #toggle-newsinapp, #newtoolbar-title {
   display: flex;
   margin-right: 15px; }
 
