--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -3869,9 +3869,11 @@ label[for="form.ext_editor"] ~ div.widget {
   margin-bottom: 10px; }
 
 #portlet_media .titleResource a {
-  display: block;
+  display: -webkit-box;
   height: 50px;
-  overflow: hidden; }
+  overflow: hidden;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical; }
 
 #portlet_media .contentResource {
   height: 150px; }
