--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -1208,18 +1208,10 @@ label[for="form.ext_editor"] ~ div.widget {
   padding: 0px;
 }
 
-#portlet_media {
-  padding: 0px;
-}
-
-#portlet_media h2 {
-  padding: 10px;
-}
-
 #portlet_media .carousel-control {
   position: absolute;
   left: 15px;
-  top: 40%;
+  top: 50%;
   width: 40px;
   height: 40px;
   margin-top: 5px;
@@ -1239,29 +1231,12 @@ label[for="form.ext_editor"] ~ div.widget {
 
 #player {
   width: 100%;
-  height: auto;
-  min-height: 450px;
 }
 
-#portlet_media #player {
-  min-height: 220px;
-}
-
-.description_video {
-  background-color: #585858;
-  color: white;
-  padding: 5px;
-  height: 26px;
-}
-
-.carousel-image img {
+#portlet_media .contentResource .carousel-image img {
   width: 100%;
   height: auto;
-  max-height: 220px;
-}
-
-.carousel-audio .jwplayer {
-  max-height: 220px;
+  max-height: 150px;
 }
 
 #portlet_media  .carousel .active > img, .carousel .selected > img {
@@ -2504,3 +2479,52 @@ i.icon-plone-contentmenu-display-contents_pretty_view, i.icon-folder-contents_pr
     line-height: 0;
     margin-left: 5px;
 }
+
+#box_agenda li:last-child {
+    border-bottom: none;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+}
+
+#content-core video {
+  width: 100%; }
+
+#player {
+  height: 319px;
+  width: 100%; }
+
+.ulearnbox #portlet_media {
+  margin-bottom: 0px; }
+
+#portlet_media .carousel {
+  margin-bottom: 0px; }
+
+#portlet_media .titleResource {
+  margin-bottom: 10px; }
+
+#portlet_media .titleResource a {
+  display: block;
+  height: 50px;
+  overflow: hidden; }
+
+#portlet_media .contentResource {
+  height: 150px; }
+
+#portlet_media .contentResource .player {
+  height: 100%;
+  width: 100%;
+  display: table;  }
+
+#portlet_media .contentResource .player .errorYT {
+  padding: 0px 45px;
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle;  }
+
+#portlet_media .contentResource video {
+  width: 100%; }
+
+#portlet_media .contentResource .carousel-image img {
+   width: 100%;
+   height: auto;
+   max-height: 150px; }
